--- a/src/main/resources/templates/with_equatable/bloc_exports.dart.template
+++ b/src/main/resources/templates/with_equatable/bloc_exports.dart.template
@@ -1,3 +1,4 @@
 export '${bloc_snake_case}_bloc.dart';
 export '${bloc_snake_case}_event.dart';
 export '${bloc_snake_case}_state.dart';
+export '${bloc_snake_case}_widget.dart';
