--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.11'
 }
 
-group 'com.bloc'
-version '1.2'
+group 'com.github.trgcuong'
+version '0.1'
 
 sourceCompatibility = 1.8
 
@@ -30,8 +30,6 @@ compileTestKotlin {
 
 patchPluginXml {
     changeNotes """
-      * v1.0 - Initial release
-      * v1.1 - Removed currentState from mapEventToState method
-      * v1.2 - Support for IntelliJ 2019
+      * 0.1 - Initial release
       """
 }
