--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,11 +1,11 @@
 <idea-plugin>
-    <id>com.bloc.generator_plugin</id>
-    <name>Bloc Code Generator</name>
-    <vendor email="jcocaramos@gmail.com">Bloc</vendor>
+    <id>com.github.trgcuong.bloc_generator_plugin</id>
+    <name>Bloc Template Generator</name>
+    <vendor email="trgcuong@gmail.com">Bloc</vendor>
 
     <description>
         <![CDATA[
-            IntelliJ and Android Studio code generator plugin for the Bloc pattern
+            Base Bloc Template Generator.
         ]]>
     </description>
 
@@ -14,7 +14,7 @@
         <action class="com.bloc.intellij_generator_plugin.action.GenerateBlocAction"
                 description="Generate a new Bloc"
                 id="GenerateBlocId"
-                text="New Bloc">
+                text="Bloc Template">
             <add-to-group
                     group-id="NewGroup"
                     relative-to-action="NewGroup"
